# octocrab

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  fix.c  release-plz.toml
.github/: dependabot.yml
.github/workflows/: release-plz.yml  release.yml  rust.yml
examples/: create_a_gist.rs  create_issue_with_sub_issues.rs  create_org_secret.rs  create_repo_from_template.rs  create_repo_secret.rs  custom_client.rs  delete_repo.rs  device_flow.rs  get_code_scanning_alerts.rs  get_commit.rs  get_content.rs  get_dependabot_alerts.rs  get_rate_limit.rs  get_repo.rs  get_repo_sbom.rs  get_secret_scanning_alerts.rs  github_app_authentication.rs  github_app_authentication_manual.rs  graphql_issues.rs  http_cache.rs  is_collab.rs  issues_query.graphql  list_all_workflow_runs.rs  list_forks.rs  list_gists_for_token_holder.rs  list_org_self_hosted_runners.rs  list_repos_for_authenticated_user.rs  list_repos_starred_by_authenticated_user.rs  list_team_members.rs  manage_sub_issues.rs  merge_branch.rs  notifications.rs  paging_results.rs  poll_events.rs  poll_org_events.rs  poll_repo_events.rs  print_license.rs  print_pr_diff.rs  render_markdown.rs  search_issues.rs  (+6 more)
minerador_artifacts/: IMPLEMENTATION_PLAN.md
models/: .gitignore  Cargo.toml
models/src/: actions.rs  apps.rs  checks.rs  events.rs  gists.rs  hooks.rs  lib.rs  reactions.rs  repos.rs  timelines.rs  webhook_events.rs  workflows.rs
models/src/events/: payload.rs
models/src/events/payload/: delete.rs  fork.rs  installation_repositories.rs  issue_comment.rs  member.rs  pull_request_review_comment.rs  release.rs  watch.rs  workflow_run.rs
models/src/repos/: secrets.rs
models/src/webhook_events/payload/: branch_protection_rule.rs  check_suite.rs  code_scanning_alert.rs  commit_comment.rs  create.rs  deploy_key.rs  deployment_protection_rule.rs  deployment_status.rs  discussion.rs  discussion_comment.rs  fork.rs  github_app_authorization.rs  gollum.rs  issue_comment.rs  issues.rs  label.rs  marketplace_purchase.rs  member.rs  membership.rs  merge_group.rs  meta.rs  org_block.rs  package.rs  page_build.rs  ping.rs  project.rs  projects_v2.rs  projects_v2_item.rs  pull_request.rs  pull_request_review.rs  pull_request_review_comment.rs  push.rs  registry_package.rs  release.rs  repository.rs  repository_advisory.rs  repository_dispatch.rs  repository_import.rs  schedule.rs  secret_scanning_alert.rs  (+10 more)
octocrab-derive/: Cargo.toml
octocrab-derive/src/: lib.rs
octocrab-derive/tests/: test.rs
octocrab-derive/tests/ui/: 01-valid.rs  02-no-struct.rs  02-no-struct.stderr  03-no-fields.rs  03-no-fields.stderr
src/: api.rs  auth.rs  body.rs  error.rs  etag.rs  from_response.rs  lib.rs  main.rs  models.rs  page.rs  params.rs  rate_limiting.rs
src/api/: actions.rs  activity.rs  apps.rs  auth.rs  checks.rs  classroom.rs  code_scannings.rs  codes_of_conduct.rs  commits.rs  current.rs  events.rs  gists.rs  gitignore.rs  hooks.rs  issues.rs  licenses.rs  markdown.rs  meta.rs  orgs.rs  projects.rs  pulls.rs  ratelimit.rs  repos.rs  search.rs  teams.rs  users.rs  workflows.rs
src/auth/: apps.rs
src/models/: actions.rs  activity.rs  apps.rs  checks.rs  classroom.rs  code_scannings.rs  codes_of_conduct.rs  commits.rs  date_serde.rs  events.rs  gists.rs  hooks.rs  interaction_limits.rs  issues.rs  orgs.rs  orgs_copilot.rs  pulls.rs  reactions.rs  repos.rs  search.rs  teams.rs  timelines.rs  webhook_events.rs  workflows.rs
src/service/: mod.rs  wasm.rs  wasm_client.rs
src/wasm/: mod.rs  reqwest_tower_service.rs  wasm.rs
tests/: actions_add_selected_repo_to_org_secret_test.rs  actions_delete_workflow_run_logs_test.rs  actions_download_job_logs_test.rs  actions_list_repository_artifacts_test.rs  actions_remove_selected_repo_from_org_secret_test.rs  actions_self_hosted_runners.rs  actions_workflows_dispatches_test.rs  auth_exchange_web_flow_code_test.rs  auth_oauth_flow_test.rs  cache_mem_test.rs  cache_redb_test.rs  cache_test_helpers.rs  check_suites.rs  classroom_assignments_tests.rs  classroom_classrooms_tests.rs  code_scanning_alert_update_test.rs  code_scanning_alerts_list_test.rs  code_scanning_analysis_test.rs  codes_of_conduct_tests.rs  commit_associated_check_runs_tests.rs  current_user_orgs_test.rs  dependabot_alerts_test.rs  events_test.rs  follow_redirect.rs  generate_release_notes_test.rs  gists_test.rs  hooks_delivery_list.rs  interactions.rs  issues_check_assignee_test.rs  issues_comments_delete_test.rs  issues_comments_reactions_delete_test.rs  issues_labels_delete_test.rs  issues_locking_test.rs  issues_reactions_delete_test.rs  issues_timeline_tests.rs  mock_error.rs  notifications_threads_test.rs  org_copilot_billing_seat_modifications_tests.rs  org_copilot_billing_seats_tests.rs  org_copilot_billing_tests.rs  (+50 more)
tests/resources/: check_dependabot_alerts.json  check_run_annotations.json  check_secrets_alerts.json  check_secrets_alerts_locations.json  check_suite.json  check_suite_preferences.json  classroom_get_assignment.json  classroom_get_classroom.json  classroom_get_grades.json  classroom_list_accepted.json  classroom_list_assignments.json  classroom_list_classrooms.json  codes_of_conduct_get_code.json  codes_of_conduct_list_all.json  codescanning_alert_error.json  codescanning_alert_single.json  codescanning_alerts_multiple.json  commit_check_runs.json  commit_comment_created_webhook_event.json  commit_comment_event.json  create_event.json  create_event_with_null_description.json  delete_event.json  fork_event.json  generate_release_notes.json  get_pull_request_review.json  get_pull_request_review_comments.json  gollum_event.json  hooks_delivery_list.json  installation_created_webhook_event.json  installation_deleted_webhook_event.json  installation_event.json  installation_new_permissions_accepted_webhook_event.json  installation_repositories_removed_webhook_event.json  interactions.json  issue_comment_created_webhook_event.json  issue_comment_deleted_webhook_event.json  issue_comment_edited_webhook_event.json  issue_comment_event.json  issue_comment_webhook_webhook.json  (+74 more)
(+141 files in other folders)
