# Fix for Issue #224: Octocrab doesn't compile with Yew (for me)

[package]
name = "octocrab"
version = "0.16.1"
authors = ["XAMPPRocky <xampprocky@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "A modern, extensible GitHub API client."
repository = "https://github.com/XAMPPRocky/octocrab"
documentation = "https://docs.rs/octocrab"
readme = "README.md"
keywords = ["github", "api", "client"]
categories = ["web-programming::http-client"]

[features]
default = ["native"]
native = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
wasm = ["reqwest/default", "js-sys", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
arc-swap = "1.5"
async-trait = "0.1.52"
base64 = "0.13"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
hyperx = "1.4"
jsonwebtoken = "8"
once_cell = "1.9"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.7"
snafu = { version = "0.7", features = ["backtraces"] }
tracing = "0.1"
url = { version = "2.2", features = ["serde"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
wiremock = "0.5"