[package]
name = "octocrab-models"
version = "0.38.0"
resolver = "2"
authors = ["XAMPPRocky <xampprocky@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/XAMPPRocky/octocrab"
repository = "https://github.com/XAMPPRocky/octocrab.git"
description = "A modern, extensible GitHub API client."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/octocrab"
categories = ["web-programming::http-client"]
keywords = ["github", "github-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_urlencoded = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
octocrab = { path = "../" }
